# L.I.F.E

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
initium/: Cargo.toml
initium/.cargo/: config.toml
initium/src/: descriptor.rs  entries.rs  gdt.rs  initium.rs  kernel.rs  main.rs  memory.rs
nukleus/: Cargo.toml
nukleus/src/: main.rs  memory.rs  text_based_interface.rs
nukleus/src/memory/: allocator.rs
nukleus/src/text_based_interface/: framebuffer_writer.rs  primitive.rs
src/: disk_image.rs  fat_fs.rs  file_data.rs  gpt_fs.rs  main.rs  uefi.rs
synapse/: Cargo.toml
synapse/src/: boot.rs  framebuffer.rs  lib.rs  memory.rs  optional.rs  tls_template.rs
synapse/src/framebuffer/: writer.rs
