[package]
name = "initium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
synapse = { version = "0.1.0", path = "../synapse" }
x86_64 = "0.14.8"
uefi = "0.20.0"
usize_conversions = "0.2.0"
xmas-elf = "0.9.0"